# openGL

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini
assets/shaders/: basic.frag  basic.vert
assets/shaders/default/: cluster_build.comp  cluster_cull.comp  outline.frag  outline.vert  ui.frag  ui.vert
docs/: Doxyfile
engine/: CMakeLists.txt
engine/include/engine/: app.h  camera.h  colour.h  colour_utils.h  engine.h  light.h  material.h  mesh.h  model.h  renderTarget.h  renderer.h  scene.h  shader.h  ubo.h  window.h
engine/include/engine/utils/: file.h
engine/src/: app.cpp  renderTarget.cpp  renderer.cpp  scene.cpp  shader.cpp
engine/src/gui/: gui.cpp  gui.h
engine/src/renderer/: camera.cpp  material.cpp  mesh.cpp  model.cpp  renderTarget.cpp  renderer.cpp  scene.cpp  shader.cpp  ubo.cpp
engine/src/utils/: file.cpp
engine/src/window/: window.cpp
learnOpenGL/: glad.c  learnOpenGL.sln
learnOpenGL/learnOpenGL/: learnOpenGL.vcxproj  main.cpp
learnOpenGL/learnOpenGL/includes/glad/: glad.h
learnOpenGL/learnOpenGL/lib/: glfw3.lib
learnOpenGL/learnOpenGL/shaders/: fragment.glsl  vertex.glsl
learnOpenGL/learnOpenGL/x64/Debug/: learnOpenGL.exe.recipe  learnOpenGL.ilk  vc143.idb
learnOpenGL/learnOpenGL/x64/Debug/learnOpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  learnOpenGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/stb_image/: CMakeLists.txt
runtime/: CMakeLists.txt  main.cpp
tools/: build.ps1  buildAll.ps1  buildDocs.ps1  buildEngine.ps1  buildRelease.ps1  buildRuntime.ps1  run.ps1
